--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
         "@types/node": "^20.4.5",
         "@types/react": "^18.2.17",
         "@types/react-dom": "^18.2.7",
+        "axios": "^1.4.0",
         "ejs": "^3.1.9",
         "express": "^4.18.2",
+        "react-router-dom": "^6.14.2",
         "typescript": "^5.1.6"
     },
     "devDependencies": {
