--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "axios": "^1.4.0",
         "ejs": "^3.1.9",
         "express": "^4.18.2",
+        "less": "^4.1.3",
+        "less-loader": "^11.1.3",
         "react-router-dom": "^6.14.2",
         "typescript": "^5.1.6"
     },
