--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/react": "^18.2.17",
         "@types/react-dom": "^18.2.7",
         "axios": "^1.4.0",
+        "better-react-carousel": "^1.1.1",
         "ejs": "^3.1.9",
         "express": "^4.18.2",
         "less": "^4.1.3",
