--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "@types/react-dom": "^18.2.7",
         "axios": "^1.4.0",
         "better-react-carousel": "^1.1.1",
+        "chart.js": "^4.3.2",
         "ejs": "^3.1.9",
         "express": "^4.18.2",
         "less": "^4.1.3",
         "less-loader": "^11.1.3",
+        "react-chartjs-2": "^5.2.0",
         "react-router-dom": "^6.14.2",
         "typescript": "^5.1.6"
     },
