--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@types/jest": "^29.5.3",
+        "@types/lodash": "^4.14.196",
         "@types/node": "^20.4.5",
         "@types/react": "^18.2.17",
         "@types/react-dom": "^18.2.7",
@@ -22,6 +23,7 @@
         "express": "^4.18.2",
         "less": "^4.1.3",
         "less-loader": "^11.1.3",
+        "lodash": "^4.17.21",
         "react-chartjs-2": "^5.2.0",
         "react-router-dom": "^6.14.2",
         "typescript": "^5.1.6"
