--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "babel-loader": "^9.1.3",
         "concurrently": "^8.2.0",
         "css-loader": "^6.8.1",
+        "dotenv-webpack": "^8.0.1",
         "jest": "^29.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
