--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
         "@babel/preset-env": "^7.22.9",
         "@babel/preset-react": "^7.22.5",
         "@babel/preset-typescript": "^7.22.5",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^14.0.0",
+        "axios-mock-adapter": "^1.21.5",
         "babel-loader": "^9.1.3",
         "concurrently": "^8.2.0",
         "css-loader": "^6.8.1",
         "dotenv-webpack": "^8.0.1",
         "jest": "^29.6.2",
+        "jest-environment-jsdom": "^29.6.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "style-loader": "^3.3.3",
